--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -4,7 +4,7 @@
     --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
     --color-border-default: hsla(0,0%,100%,.1) !important;
     --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
-    --color-text-default: rgb(237, 237, 237) !important;
+    --color-text-default: hsl(0, 0%, 93%) !important;
     --color-date-default: rgb(152, 144, 144) !important;
     --color-link-default: rgb(208, 106, 78) !important;
     --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgb(208 106 78 / 10%) 98%) !important;
@@ -15,12 +15,12 @@
 .theme-default body{
     --color-bg-default: rgb(237, 237, 237) !important;
     --theme-gradient: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgba(237, 237, 237, 1) 98%)!important;
-    --color-border-default: hsla(0,0%,100%,.1) !important;
+    --color-border-default: hsla(0, 0%, 62%, 0.1) !important;
     --color-bg-transparent-default: rgb(0, 0, 0, 0) !important;
     --color-text-default: rgb(32, 32, 32) !important;
     --color-date-default: rgb(178, 178, 178) !important;
     --color-link-default: rgb(149, 75, 54) !important;
-    --color-hover-default: rgb(101, 184, 148) !important;
+    --color-hover-default: linear-gradient(to bottom, rgba(237, 237, 237, 0), rgb(208 106 78 / 10%) 98%)!important;
     --color-cta-background: rgb(32, 32, 32) !important;
     --color-cta-text: rgb(237, 237, 237) !important;
 }
