--- a/style/main.css
+++ b/style/main.css
@@ -2,7 +2,8 @@
 .theme-blackout body {
   --color-bg-default: rgb(32, 32, 32) !important;
   --theme-gradient: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgba(32, 32, 32, 1) 98%) !important;
-  --color-border-default: hsla(0,0%,100%,.1) !important;
+  /* --color-border-default: hsla(0,0%,100%,.1) !important; */
+  --color-border-default: hsl(0deg 0% 43% / 10%) !important;
   --color-bg-transparent-default: rgb(255, 255, 255, 0) !important;
   --color-text-default: hsl(0, 0%, 93%) !important;
   --color-date-default: rgb(152, 144, 144) !important;
@@ -10,7 +11,7 @@
   --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgb(208 106 78 / 10%) 98%) !important;
   --color-cta-background: rgb(237, 237, 237) !important;
   --color-cta-text: rgb(32, 32, 32) !important;
-  --color-boxshadow-default: rgb(208 106 78 / 16%) 0px 10px 36px 0px, rgb(208 106 78 / 6%) 0px 0px 0px 1px !important;
+  --color-boxshadow-default: rgb(159 85 34 / 8%) 0 10px 15px -3px, rgb(255 255 255 / 5%) 0 4px 6px -2px !important;
 }
 
 .theme-default body {
