--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -51,6 +51,7 @@ tbody.notion-collection-table__body{
     padding: 2rem !important;
     border-collapse: inherit !important;
     border: 1px solid var(--color-border-default) !important;
+    border-radius: 5px !important;
 }
 
 .notion-collection-table th{
@@ -101,7 +102,8 @@ tbody.notion-collection-table__body{
     display: flex !important;
     border: 1px solid var(--color-border-default)!important;
     padding: 2rem !important;
-    background: none !important;
+    /* background: none !important; */
+    background: var(--color-hover-default) !important;
     box-shadow: var(--color-boxshadow-default) !important;
 }
 
