--- a/style/main.css
+++ b/style/main.css
@@ -299,6 +299,7 @@ tbody.notion-collection-table__body {
   padding: 2rem !important;
   border-collapse: inherit !important;
   border: 1px solid var(--color-border-default) !important;
+  border-radius: 5px !important;
 }
 
 .notion-collection-table th {
@@ -348,7 +349,8 @@ tbody.notion-collection-table__body {
   display: flex !important;
   border: 1px solid var(--color-border-default) !important;
   padding: 2rem !important;
-  background: none !important;
+  /* background: none !important; */
+  background: var(--color-hover-default) !important;
   box-shadow: var(--color-boxshadow-default) !important;
 }
 
