--- a/sass/pages/_episodes.scss
+++ b/sass/pages/_episodes.scss
@@ -1,5 +1,6 @@
 .notion-toggle{
     border: 1px solid var(--color-border-default) !important;
+    border-radius: 5px !important;
     text-align: left !important;
     margin: -0.5px !important;
     position: relative !important;
