--- a/style/main.css
+++ b/style/main.css
@@ -210,6 +210,7 @@ h3.notion-heading {
 
 .notion-toggle {
   border: 1px solid var(--color-border-default) !important;
+  border-radius: 5px !important;
   text-align: left !important;
   margin: -0.5px !important;
   position: relative !important;
