--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -11,8 +11,8 @@
     --color-hover-default: linear-gradient(to bottom, rgba(32, 32, 32, 0), rgb(208 106 78 / 10%) 98%) !important;
     --color-cta-background: rgb(237, 237, 237) !important;
     --color-cta-text: rgb(32, 32, 32) !important;
-    --color-boxshadow-default: rgb(208 106 78 / 10%) 0px 80px 20px -80px, rgb(0 0 0 / 30%) 0px 30px 60px -30px !important;
-    --color-hovershadow-default: rgb(208 106 78 / 15%) 0px 80px 20px -80px, rgb(0 0 0 / 30%) 0px 30px 60px -30px !important;
+    --color-boxshadow-default: rgb(208 106 78 / 10%) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
+    --color-hovershadow-default: rgba(78, 184, 208, 0.1) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
 }
 
 .theme-default body{
