--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -104,11 +104,11 @@ tbody.notion-collection-table__body{
     padding: 2rem !important;
     background: none !important;
     box-shadow: var(--color-boxshadow-default) !important;
+}
 
-    :hover{
-        box-shadow: var(--color-hovershadow-default) !important;
-        transition: box-shadow .2s ease-in-out !important;
-    }
+.notion-collection-card:hover{
+    box-shadow: var(--color-hovershadow-default) !important;
+    transition: box-shadow .3s ease-in-out !important;
 }
 
 
