--- a/style/main.css
+++ b/style/main.css
@@ -12,7 +12,7 @@
   --color-cta-background: rgb(237, 237, 237) !important;
   --color-cta-text: rgb(32, 32, 32) !important;
   --color-boxshadow-default: rgb(208 106 78 / 10%) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
-  --color-hovershadow-default: rgba(78, 184, 208, 0.1) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
+  --color-hovershadow-default: rgba(229 144 74 / 10%) 0px 10px 30px -10px, rgb(32 32 32 / 30%) 0px 10px 60px -50px !important;
 }
 
 .theme-default body {
@@ -355,9 +355,10 @@ tbody.notion-collection-table__body {
   background: none !important;
   box-shadow: var(--color-boxshadow-default) !important;
 }
-.notion-collection-card :hover {
+
+.notion-collection-card:hover {
   box-shadow: var(--color-hovershadow-default) !important;
-  transition: box-shadow 0.2s ease-in-out !important;
+  transition: box-shadow 0.3s ease-in-out !important;
 }
 
 .notion-collection-card__cover {
