--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -166,4 +166,13 @@ tbody.notion-collection-table__body{
 }
 
 
+//media queries
+
+@media only screen and (min-width: 0em) {
+    .notion-collection-card{
+        display:block !important;
+    }
+}
+
+
 
