--- a/style/main.css
+++ b/style/main.css
@@ -410,4 +410,10 @@ tbody.notion-collection-table__body {
 }
 .notion-semantic-string .link :hover {
   opacity: 1 !important;
+}
+
+@media only screen and (min-width: 0em) {
+  .notion-collection-card {
+    display: block !important;
+  }
 }/*# sourceMappingURL=main.css.map */
