--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -59,3 +59,22 @@
 .theme-default .light-mode-icon{
     display: none !important;
 }
+
+//hamburger menu
+
+.notion-dropdown__menu-header, .notion-dropdown__option-icon, .notion-dropdown__button svg:first-of-type {
+/*     display: none !important; */
+}
+
+.notion-dropdown{
+    width: 100% !important;
+}
+
+.notion-dropdown__button{
+    justify-content: space-between !important;
+    width: 100% !important;
+    border: 1px solid var(--color-border-default) !important;
+    padding: 10px !important;
+    border-radius: 8px !important;
+}
+
