--- a/style/main.css
+++ b/style/main.css
@@ -210,6 +210,22 @@ h3.notion-heading {
   display: none !important;
 }
 
+.notion-dropdown__menu-header, .notion-dropdown__option-icon, .notion-dropdown__button svg:first-of-type {
+  /*     display: none !important; */
+}
+
+.notion-dropdown {
+  width: 100% !important;
+}
+
+.notion-dropdown__button {
+  justify-content: space-between !important;
+  width: 100% !important;
+  border: 1px solid var(--color-border-default) !important;
+  padding: 10px !important;
+  border-radius: 8px !important;
+}
+
 .notion-toggle {
   border: 1px solid var(--color-border-default) !important;
   border-radius: 5px !important;
