--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -168,9 +168,13 @@ tbody.notion-collection-table__body{
 
 //media queries
 
-@media only screen and (min-width: 0em) {
+@media only screen and (min-width: 50em) {
     .notion-collection-card{
         display:block !important;
+    }
+
+    .notion-collection-card__content{
+        width: auto !important;
     }
 }
 
