--- a/style/main.css
+++ b/style/main.css
@@ -428,8 +428,11 @@ tbody.notion-collection-table__body {
   opacity: 1 !important;
 }
 
-@media only screen and (min-width: 0em) {
+@media only screen and (min-width: 50em) {
   .notion-collection-card {
     display: block !important;
+  }
+  .notion-collection-card__content {
+    width: auto !important;
   }
 }/*# sourceMappingURL=main.css.map */
