--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -168,7 +168,7 @@ tbody.notion-collection-table__body{
 
 //media queries
 
-@media only screen and (min-width: 50em) {
+@media (max-width: 600px) {
     .notion-collection-card{
         display:block !important;
     }
