--- a/style/main.css
+++ b/style/main.css
@@ -428,7 +428,7 @@ tbody.notion-collection-table__body {
   opacity: 1 !important;
 }
 
-@media only screen and (min-width: 50em) {
+@media (max-width: 600px) {
   .notion-collection-card {
     display: block !important;
   }
