--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -169,6 +169,10 @@ tbody.notion-collection-table__body{
 //media queries
 
 @media (max-width: 600px) {
+    tbody.notion-collection-table__body{
+        flex-direction: column !important;
+    }
+    
     .notion-collection-card{
         display:block !important;
     }
