--- a/style/main.css
+++ b/style/main.css
@@ -429,6 +429,9 @@ tbody.notion-collection-table__body {
 }
 
 @media (max-width: 600px) {
+  tbody.notion-collection-table__body {
+    flex-direction: column !important;
+  }
   .notion-collection-card {
     display: block !important;
   }
