--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -181,6 +181,10 @@ tbody.notion-collection-table__body{
         flex-direction: column !important;
     }
 
+    .notion-collection-table tr{
+        width: 100% !important;
+    }
+
     .notion-collection-card{
         display:block !important;
     }
