--- a/style/main.css
+++ b/style/main.css
@@ -438,6 +438,9 @@ tbody.notion-collection-table__body {
   tbody.notion-collection-table__body {
     flex-direction: column !important;
   }
+  .notion-collection-table tr {
+    width: 100% !important;
+  }
   .notion-collection-card {
     display: block !important;
   }
