--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -162,11 +162,21 @@ tbody.notion-collection-table__body{
 //small gallery
 .notion-collection-gallery.small{
     grid-template-columns: repeat(3, 1fr) !important;
+    .notion-collection-card:hover{
+        box-shadow: none !important;
+        transition: none !important;
+    }
     .notion-collection-card{
         display: flex !important;
         flex-direction: column !important;
+        box-shadow: none !important;
+        border: none !important;
+        padding: 0px !important;
         .notion-collection-card__content{
             width: auto !important;
+            .notion-collection-card__property:nth-child(2){
+                font-size: 1rem !important;
+            }
         }
     }
 }
