--- a/style/main.css
+++ b/style/main.css
@@ -427,12 +427,22 @@ tbody.notion-collection-table__body {
 .notion-collection-gallery.small {
   grid-template-columns: repeat(3, 1fr) !important;
 }
+.notion-collection-gallery.small .notion-collection-card:hover {
+  box-shadow: none !important;
+  transition: none !important;
+}
 .notion-collection-gallery.small .notion-collection-card {
   display: flex !important;
   flex-direction: column !important;
+  box-shadow: none !important;
+  border: none !important;
+  padding: 0px !important;
 }
 .notion-collection-gallery.small .notion-collection-card .notion-collection-card__content {
   width: auto !important;
+}
+.notion-collection-gallery.small .notion-collection-card .notion-collection-card__content .notion-collection-card__property:nth-child(2) {
+  font-size: 1rem !important;
 }
 
 .notion-semantic-string .link {
