--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -181,6 +181,17 @@ tbody.notion-collection-table__body{
     }
 }
 
+//Notion Columns
+.notion-columns:first-of-type{
+    width: 375px !important;
+    position: fixed !important;
+}
+
+.notion-columns:nth-of-type(2){
+    margin-left: calc(375px + 30px) !important;
+    width: 100% !important;
+}
+
 //links
 .notion-semantic-string .link{
     border: none !important;
