--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,14 +182,13 @@ tbody.notion-collection-table__body{
 }
 
 //Notion Columns
-.notion-column:first-of-type{
-    width: 250px !important;
-    position: absolute !important;
+.notion-column:first-of-type[style] {
+    width: calc((100% - 30px) * 1) * 0.26087 !important;
 }
 
 .notion-column:nth-of-type(2){
-    margin-left: calc(250px + 30px) !important;
-    width: 100% !important;
+    margin-left: 50px !important;
+    width: 50% !important;
 }
 
 //links
