--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,12 +182,16 @@ tbody.notion-collection-table__body{
 }
 
 //Notion Columns
+.notion-column-list{
+    gap: 4rem !important;
+}
+
 .notion-column:first-of-type {
-    width: calc((100% - 30px * 1) * 0.375) !important;
+    width: calc((100% - 100px * 1) * 0.375) !important;
 }
 
 .notion-column:nth-of-type(2){
-    margin-left: 50px !important;
+    margin-inline-start: 0px !important;
     width: 50% !important;
 }
 
