--- a/style/main.css
+++ b/style/main.css
@@ -445,12 +445,16 @@ tbody.notion-collection-table__body {
   font-size: 1rem !important;
 }
 
+.notion-column-list {
+  gap: 4rem !important;
+}
+
 .notion-column:first-of-type {
-  width: calc((100% - 30px) * 0.375) !important;
+  width: calc((100% - 100px) * 0.375) !important;
 }
 
 .notion-column:nth-of-type(2) {
-  margin-left: 50px !important;
+  margin-inline-start: 0px !important;
   width: 50% !important;
 }
 
