--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -187,12 +187,12 @@ tbody.notion-collection-table__body{
 }
 
 .notion-column:first-of-type {
-    width: calc((100% - 100px * 1) * 0.375) !important;
+    width: calc((100% - 8rem) * 0.375) !important;
 }
 
 .notion-column:nth-of-type(2){
     margin-inline-start: 0px !important;
-    width: 50% !important;
+    width: 100% !important;
 }
 
 //links
