--- a/style/main.css
+++ b/style/main.css
@@ -100,8 +100,8 @@ p, h1, h2, h3, h4, h5, h6 {
   --font-size-2: 1.5rem;
   --font-size-3: 2rem;
   --font-size-4: 2.5rem;
-  --font-size-5: 3rem;
-  --font-size-6: 3.5rem;
+  --font-size-5: 3.75em;
+  --font-size-6: 7.5em;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -120,11 +120,16 @@ h1.notion-heading strong, h2.notion-heading strong, h3.notion-heading strong {
 }
 
 h2.notion-heading {
-  font-size: var(--font-size-4) !important;
+  font-size: var(--font-size-5) !important;
 }
 
 h3.notion-heading {
   font-size: var(--font-size-2) !important;
+  font-weight: 400 !important;
+}
+
+p {
+  font-size: var(--font-size-1) !important;
 }
 
 .notion-header__cover.has-cover {
